examples/test/testpolicy5628.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5628
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key8: value9
      key37: value21
      key34: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value32
          key34: value17
          key32: value10
      podSelector:
        matchLabels:
          key34: value45
          key10: value32
